[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Personagens/CharacterSheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Interface/Dialogo/BotãoInterogação.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Interface/Dialogo/CaixaNome.png" type="Texture" id=5]
[ext_resource path="res://Fonts/noto-sans-regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/Interface/Menu/full volume.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Interface/Menu/mute volume.png" type="Texture" id=8]
[ext_resource path="res://Audios/Track 1.mp3" type="AudioStream" id=9]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Interface/Design/BackGround.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/LogoMicrosoft.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/CCMiniMapa.png" type="Texture" id=13]
[ext_resource path="res://Audios/Beep.wav-8a40c87ada5a0fb3b17e7da786a6259a.sample" type="AudioStream" id=14]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/SIMiniMapa.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/LogoApple.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/LogoNasa.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/LogoTesla.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/ECMiniMapa.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/MapaExternoMinimapa.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Personagens/MiniaturaMiniMapa.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/ESMiniMapa.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Mapa/Exterior/Logos/pilha-de-livros-com-estilo-pixel-art_475147-301.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Interface/Dialogo/efe.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Interface/Dialogo/marca-de-verificacao-e-simbolos-cruzados-no-estilo-pixel-art_505135-206.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Right.gd" type="Script" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 41 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 273, 79 )
states/Walk/node = SubResource( 6 )
states/Walk/position = Vector2( 470, 79 )
transitions = [ "Idle", "Walk", SubResource( 7 ), "Walk", "Idle", SubResource( 8 ) ]
start_node = "Idle"
graph_offset = Vector2( -24, -10 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="DynamicFont" id=14]
size = 184
outline_size = 13
outline_color = Color( 0.482353, 0.113725, 0.784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 432
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 220
outline_color = Color( 0.596078, 0.290196, 0.847059, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 57 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 1.99999 )
scale = Vector2( 7.96875, 8.0625 )
texture = ExtResource( 2 )
hframes = 6
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -3504
limit_top = -3216
limit_right = 4056
limit_bottom = 4344
script = ExtResource( 4 )

[node name="CaixaNome" type="Sprite" parent="."]
visible = false
position = Vector2( -3.8147e-06, -40 )
scale = Vector2( 0.156991, 0.156991 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="CaixaNome"]
margin_left = -4860.15
margin_top = -337.599
margin_right = -1458.15
margin_bottom = -86.5991
custom_fonts/font = SubResource( 14 )
text = "NOME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CaixaNome"]
margin_left = 3395.1
margin_top = -312.12
margin_right = 4867.1
margin_bottom = 282.88
custom_fonts/font = SubResource( 15 )
text = "OK"
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CaixaNome"]
margin_left = -4873.0
margin_top = -102.0
margin_right = -1440.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 14 )
text = "Digite seu Nome:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CaixaNome"]
margin_left = -1299.0
margin_top = -223.0
margin_right = 3319.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
align = 1
max_length = 15
caret_blink = true
caret_blink_speed = 0.93
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BotãoInterogação" type="Sprite" parent="CanvasLayer"]
position = Vector2( 58, 127 )
scale = Vector2( 0.0602041, 0.0602041 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="CanvasLayer/BotãoInterogação"]
margin_left = -556.0
margin_top = -499.0
margin_right = 527.0
margin_bottom = 523.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Button" parent="CanvasLayer"]
margin_left = 17.0
margin_top = 11.0
margin_right = 93.0
margin_bottom = 85.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundMuted" type="Sprite" parent="CanvasLayer/Mute"]
position = Vector2( 39.5, 38.509 )
scale = Vector2( 2.63333, 2.49067 )
texture = ExtResource( 8 )

[node name="SoundUnmuted" type="Sprite" parent="CanvasLayer/Mute"]
position = Vector2( 36, 39 )
scale = Vector2( 2.82759, 2.73829 )
texture = ExtResource( 7 )

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="Sprite" type="Sprite" parent="CanvasLayer"]

[node name="BackGround" type="Sprite" parent="CanvasLayer/Sprite"]
position = Vector2( 1731, 174.25 )
scale = Vector2( 1.26, 1.165 )
texture = ExtResource( 11 )

[node name="MapaExterno" type="Sprite" parent="CanvasLayer/Sprite"]
position = Vector2( 1731, 173 )
scale = Vector2( 0.332407, 0.306837 )
texture = ExtResource( 20 )

[node name="LogoNasa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( -439.219, 156.435 )
scale = Vector2( 0.0563736, 0.0610715 )
texture = ExtResource( 17 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="CanvasLayer/Sprite/MapaExterno"]

[node name="MiniaturaMiniMapa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno/KinematicBody2D"]
position = Vector2( -36.1001, -84.7355 )
scale = Vector2( 0.496659, 0.538048 )
texture = ExtResource( 21 )

[node name="SiMiniMapa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( -90.2507, -488.859 )
scale = Vector2( 0.755496, 0.755496 )
texture = ExtResource( 15 )

[node name="LogoTesla" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( 168.473, 156.435 )
scale = Vector2( 0.0777989, 0.0777989 )
texture = ExtResource( 18 )

[node name="LogoMicrosoft" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( -210.584, 140.14 )
scale = Vector2( 0.181029, 0.181029 )
texture = ExtResource( 12 )

[node name="LogoApple" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( 454.263, 237.911 )
scale = Vector2( 0.254302, 0.254302 )
texture = ExtResource( 16 )

[node name="EsMiniMapa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( 306.853, -485.6 )
scale = Vector2( 0.755497, 0.755496 )
texture = ExtResource( 22 )

[node name="EcMiniMapa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( -472.313, -195.544 )
scale = Vector2( 0.755497, 0.755496 )
texture = ExtResource( 19 )

[node name="CcMiniMapa" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( 168.468, -485.6 )
scale = Vector2( 0.755497, 0.755496 )
texture = ExtResource( 13 )

[node name="Pilha-de-livros-com-estilo-pixel-art475147-301" type="Sprite" parent="CanvasLayer/Sprite/MapaExterno"]
position = Vector2( -21.0581, -215.098 )
scale = Vector2( 0.588218, 0.588218 )
texture = ExtResource( 23 )

[node name="Reaction" type="Node2D" parent="CanvasLayer"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/Reaction"]
visible = false
position = Vector2( 962, 545 )
scale = Vector2( 2.77876, 2.77876 )
texture = ExtResource( 25 )
script = ExtResource( 29 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Reaction"]
visible = false
position = Vector2( 958, 549 )
scale = Vector2( 3.20142, 3.20142 )
texture = ExtResource( 27 )
script = ExtResource( 29 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Buttom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="mouse_entered" from="CaixaNome/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="pressed" from="CaixaNome/Button2" to="Camera2D" method="_on_Button2_pressed"]
[connection signal="text_entered" from="CaixaNome/LineEdit" to="Camera2D" method="_on_LineEdit_text_entered"]
[connection signal="mouse_entered" from="CanvasLayer/BotãoInterogação/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/BotãoInterogação/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/BotãoInterogação/Button" to="Camera2D" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Mute" to="." method="_on_Mute_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Mute" to="." method="_on_Mute_pressed"]
